--- a/css/style.css
+++ b/css/style.css
@@ -3,7 +3,7 @@
 	html5up.net | @n33co
 	Free for personal and commercial use under the CCA 3.0 license (html5up.net/license)
 */
-@import url("https://fonts.googleapis.com/css?family=Rubik:300,900&effect=anaglyph");
+@import url("https://fonts.googleapis.com/css?family=Rubik:300,400,500,900&effect=anaglyph");
 @import url("font-awesome.min.css");
 
 /* Basic */
@@ -15,7 +15,7 @@
 		font-weight: 300 !important;
 		letter-spacing: -0.015em;
 		line-height: 1.75em;
-		text-shadow: -0.07em 0 red, 0.07em 0 cyan;
+		/*text-shadow: -0.07em 0 red, 0.07em 0 cyan;*/
 	}
 
 	body {
@@ -34,11 +34,11 @@
 			color: white;
 			font-family: 'Rubik', sans-serif;
 			font-size: 13pt;
-			font-weight: 10 !important;
+			font-weight: 400 !important;
 			letter-spacing: -0.0001em;
 			line-height: 1.75em;
-			text-shadow: -0.07em 0 red, 0.07em 0 cyan;
-			opacity: 0.5
+			/*text-shadow: -0.07em 0 red, 0.07em 0 cyan; */
+			opacity: 0.75
 }
 	a {
 		-moz-transition: border-color 0.2s ease-in-out;
@@ -114,8 +114,7 @@
 		-o-transform: translate3d(0,0,0);
 		-ms-transform: translate3d(0,0,0);
 		transform: translate3d(0,0,0);
-		/* Set your background with this */
-		background: #a1decb url("images/bg.jpg") bottom left;
+		background: #a1decb url("") bottom left;
 		background-repeat: repeat-x;
 		height: 100%;
 		left: 0;
@@ -193,11 +192,11 @@
 	@keyframes nav-icons { 0% { -moz-transform: translate3d(0,1em,0); -webkit-transform: translate3d(0,1em,0); -o-transform: translate3d(0,1em,0); -ms-transform: translate3d(0,1em,0); transform: translate3d(0,1em,0); opacity: 0; } 100% { -moz-transform: translate3d(0,0,0); -webkit-transform: translate3d(0,0,0); -o-transform: translate3d(0,0,0); -ms-transform: translate3d(0,0,0); transform: translate3d(0,0,0); opacity: 1; } }
 
 	#header {
-		-moz-animation: header 1s 2.25s forwards;
-		-webkit-animation: header 1s 2.25s forwards;
-		-o-animation: header 1s 2.25s forwards;
-		-ms-animation: header 1s 2.25s forwards;
-		animation: header 1s 2.25s forwards;
+		-moz-animation: header 0.75s 1s forwards;
+		-webkit-animation: header 0.75s 1s forwards;
+		-o-animation: header 0.75s 1s forwards;
+		-ms-animation: header 0.75s 1s forwards;
+		animation: header 0.75s 1s forwards;
 		-moz-backface-visibility: hidden;
 		-webkit-backface-visibility: hidden;
 		-o-backface-visibility: hidden;
@@ -229,6 +228,7 @@
 			font-size: 1.25em;
 			margin: 0.75em 0 0.25em 0;
 			opacity: 0.75;
+			font-weight: 500;
 		}
 
 		#header nav {
@@ -236,11 +236,11 @@
 		}
 
 			#header nav li {
-				-moz-animation: nav-icons 0.5s ease-in-out forwards;
-				-webkit-animation: nav-icons 0.5s ease-in-out forwards;
-				-o-animation: nav-icons 0.5s ease-in-out forwards;
-				-ms-animation: nav-icons 0.5s ease-in-out forwards;
-				animation: nav-icons 0.5s ease-in-out forwards;
+				-moz-animation: nav-icons 0.4s ease-in-out forwards;
+				-webkit-animation: nav-icons 0.4s ease-in-out forwards;
+				-o-animation: nav-icons 0.4s ease-in-out forwards;
+				-ms-animation: nav-icons 0.4s ease-in-out forwards;
+				animation: nav-icons 0.4s ease-in-out forwards;
 				-moz-backface-visibility: hidden;
 				-webkit-backface-visibility: hidden;
 				-o-backface-visibility: hidden;
@@ -261,6 +261,46 @@
 			}
 
 				#header nav li:nth-child(1) {
+					-moz-animation-delay: 1.25s;
+					-webkit-animation-delay: 1.25s;
+					-o-animation-delay: 1.25s;
+					-ms-animation-delay: 1.25s;
+					animation-delay: 1.25s;
+				}
+
+				#header nav li:nth-child(2) {
+					-moz-animation-delay: 1.5s;
+					-webkit-animation-delay: 1.5s;
+					-o-animation-delay: 1.5s;
+					-ms-animation-delay: 1.5s;
+					animation-delay: 1.5s;
+				}
+
+				#header nav li:nth-child(3) {
+					-moz-animation-delay: 1.75s;
+					-webkit-animation-delay: 1.75s;
+					-o-animation-delay: 1.75s;
+					-ms-animation-delay: 1.75s;
+					animation-delay: 1.75s;
+				}
+
+				#header nav li:nth-child(4) {
+					-moz-animation-delay: 2s;
+					-webkit-animation-delay: 2s;
+					-o-animation-delay: 2s;
+					-ms-animation-delay: 2s;
+					animation-delay: 2s;
+				}
+
+				#header nav li:nth-child(5) {
+					-moz-animation-delay: 2.25s;
+					-webkit-animation-delay: 2.25s;
+					-o-animation-delay: 2.25s;
+					-ms-animation-delay: 2.25s;
+					animation-delay: 2.25s;
+				}
+
+				#header nav li:nth-child(6) {
 					-moz-animation-delay: 2.5s;
 					-webkit-animation-delay: 2.5s;
 					-o-animation-delay: 2.5s;
@@ -268,76 +308,12 @@
 					animation-delay: 2.5s;
 				}
 
-				#header nav li:nth-child(2) {
-					-moz-animation-delay: 2.75s;
-					-webkit-animation-delay: 2.75s;
-					-o-animation-delay: 2.75s;
-					-ms-animation-delay: 2.75s;
-					animation-delay: 2.75s;
-				}
-
-				#header nav li:nth-child(3) {
+				#header nav li:nth-child(7) {
 					-moz-animation-delay: 3s;
 					-webkit-animation-delay: 3s;
 					-o-animation-delay: 3s;
 					-ms-animation-delay: 3s;
 					animation-delay: 3s;
-				}
-
-				#header nav li:nth-child(4) {
-					-moz-animation-delay: 3.25s;
-					-webkit-animation-delay: 3.25s;
-					-o-animation-delay: 3.25s;
-					-ms-animation-delay: 3.25s;
-					animation-delay: 3.25s;
-				}
-
-				#header nav li:nth-child(5) {
-					-moz-animation-delay: 3.5s;
-					-webkit-animation-delay: 3.5s;
-					-o-animation-delay: 3.5s;
-					-ms-animation-delay: 3.5s;
-					animation-delay: 3.5s;
-				}
-
-				#header nav li:nth-child(6) {
-					-moz-animation-delay: 3.75s;
-					-webkit-animation-delay: 3.75s;
-					-o-animation-delay: 3.75s;
-					-ms-animation-delay: 3.75s;
-					animation-delay: 3.75s;
-				}
-
-				#header nav li:nth-child(7) {
-					-moz-animation-delay: 4s;
-					-webkit-animation-delay: 4s;
-					-o-animation-delay: 4s;
-					-ms-animation-delay: 4s;
-					animation-delay: 4s;
-				}
-
-				#header nav li:nth-child(8) {
-					-moz-animation-delay: 4.25s;
-					-webkit-animation-delay: 4.25s;
-					-o-animation-delay: 4.25s;
-					-ms-animation-delay: 4.25s;
-					animation-delay: 4.25s;
-				}
-
-				#header nav li:nth-child(9) {
-					-moz-animation-delay: 4.5s;
-					-webkit-animation-delay: 4.5s;
-					-o-animation-delay: 4.5s;
-					-ms-animation-delay: 4.5s;
-					animation-delay: 4.5s;
-				}
-
-				#header nav li:nth-child(10) {
-					-moz-animation-delay: 4.75s;
-					-webkit-animation-delay: 4.75s;
-					-o-animation-delay: 4.75s;
-					-ms-animation-delay: 4.75s;
-					animation-delay: 4.75s;
 				}
 
 			#header nav a {
@@ -354,11 +330,11 @@
 					-ms-transition: all 0.2s ease-in-out;
 					transition: all 0.2s ease-in-out;
 					border-radius: 100%;
-					border: solid 1px white;
+					border: solid 3px #fbff9e;
 					display: block;
 					font-size: 1.75em;
 					height: 2.5em;
-					line-height: 2.5em;
+					line-height: 2.35em;
 					position: relative;
 					text-align: center;
 					top: 0;
@@ -371,7 +347,7 @@
 
 					#header nav a:hover:before {
 						background-color: rgba(255, 255, 255, 0.175);
-						color: white;
+						color: #fbff9e;
 					}
 
 				#header nav a:active {
@@ -391,11 +367,6 @@
 /* Footer */
 
 	#footer {
-		background-image: -moz-linear-gradient(top, rgba(0,0,0,0), rgba(0,0,0,0.5) 75%);
-		background-image: -webkit-linear-gradient(top, rgba(0,0,0,0), rgba(0,0,0,0.5) 75%);
-		background-image: -o-linear-gradient(top, rgba(0,0,0,0), rgba(0,0,0,0.5) 75%);
-		background-image: -ms-linear-gradient(top, rgba(0,0,0,0), rgba(0,0,0,0.5) 75%);
-		background-image: linear-gradient(top, rgba(0,0,0,0), rgba(0,0,0,0.5) 75%);
 		bottom: 0;
 		cursor: default;
 		height: 6em;
